--- a/templates/about.html
+++ b/templates/about.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
 {% block content %}
-    <h1>ABOUT PAGE</h1>
+  <h1> ABOUT </h1>
+
+    <a href="/"> HOME PAGE </a>
+        <h2>this is a test</h2>
+        <p>Volunteering means giving your time and abilities to aid others (usually a nonprofit organization) without the want of financial compensation.</p>
+        <a href="/register"> create an account </a>
+
 {% endblock %}
