--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -1,9 +1,16 @@
 {% extends "base.html" %}
+
 {% block content %}
-  <a href="/about">ABOUT</a>
-    {% for post in posts %}
-        <h1>{{ post.title }}</h1>
-        <p> {{ post.author }} </p> on {{post.date_posted}}
-        <p> {{post.content}} </p>
-    {% endfor %}
-{% endblock %}
+
+
+<div class="container">
+    
+    <div>
+        <h1>Find new volunteer opportunities  </h1>
+        <h2></h2>
+    </div>
+
+</div>
+
+
+{% endblock content %}
