--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -6,8 +6,8 @@
 <div class="container">
     
     <div>
-        <h1>Find new volunteer opportunities  </h1>
-        <h2></h2>
+        <h1>this is the home page</h1>
+        <h2>still working on that</h2>
     </div>
 
 </div>
