--- a/templates/login.html
+++ b/templates/login.html
@@ -18,6 +18,7 @@
           <div class="col-lg-4 mb-5 mb-lg-0">
             <div class="card">
               <div class="card-body py-5 px-md-5">
+                <!-- FORM -->
                 <form action="" method="POST">   
                   <!-- Email input -->
                   <div class="form-outline mb-4">
@@ -53,4 +54,7 @@
     </div>
   </section>
 
+
+
+  
 {% endblock %}
